# autoeval

./: .gitignore  pyproject.toml
autoeval/: __init__.py  io.py  office.py  plots.py  postprocessing.py  utils.py
basic/: PowerPoint_Base.pptx
notebooks/: 0-0-preprocess.ipynb  1-0-illustration-sampletime.ipynb  3-0-evaluation.ipynb
